# SEO-Content-Engine

./: .env  JUDGEMENT.md  README.md  SEO_Content_Engine_Article.html  main.py  pipeline.py  pyproject.toml  run_streamlit.bat  run_streamlit.sh  streamlit_app.py
agents/: evaluate.py  generate.py  learn.py  publish.py  quality_gate.py  research.py
config/: client.yaml
core/: knowledge_store.py  llm_client.py  state.py
example_output/: 20260420_091532_ai-productivity-tools-startups.md  20260420_091532_evaluation.json  knowledge_after_loop1.json
output/evaluations/: 20260424_092423_evaluation.json  20260424_095250_evaluation.json  20260425_143043_evaluation.json  20260425_143344_evaluation.json  20260425_144857_evaluation.json  20260425_145051_evaluation.json  20260426_150820_evaluation.json  20260426_151330_evaluation.json
output/posts/: 20260424_092423_boost-startup-efficiency-with-ai-product.md  20260424_095250_streamline-operations-with-no-code-ai-so.md  20260425_143043_machine-learning-for-small-business-effi.md  20260425_143344_boosting-productivity-with-chatgpt-for-b.md  20260425_144857_startup-automation-boost-efficiency-now.md  20260425_145051_ai-for-smbs-a-practical-guide-to-impleme.md  20260426_150820_streamline-operations-with-ai-workflow-a.md  20260426_151330_ai-for-business-growth-a-step-by-step-gu.md
store/: knowledge.json
tests/: test_pipeline.py
